Mail functionality done

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,9 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/OOMProject
 endorsed.classpath=
 excludes=
+file.reference.activation.jar=src/packages/activation.jar
+file.reference.javax.mail.jar=src/packages/javax.mail.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.activation.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
