--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,11 +37,16 @@ endorsed.classpath=
 excludes=
 file.reference.activation.jar=src/packages/activation.jar
 file.reference.javax.mail.jar=src/packages/javax.mail.jar
+file.reference.jcalendar-1.4.jar=src/packages/jcalendar-1.4.jar
+file.reference.jgoodies-looks-2.4.1.jar=src/packages/jgoodies-looks-2.4.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.javax.mail.jar}:\
-    ${file.reference.activation.jar}
+    ${file.reference.activation.jar}:\
+    ${libs.spring-framework500.classpath}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jgoodies-looks-2.4.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
