--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,12 +37,14 @@ endorsed.classpath=
 excludes=
 file.reference.activation.jar=src/packages/activation.jar
 file.reference.javax.mail.jar=src/packages/javax.mail.jar
+file.reference.jcalendar-1.4.jar=src/packages/jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.javax.mail.jar}:\
     ${file.reference.activation.jar}:\
-    ${libs.spring-framework500.classpath}
+    ${libs.spring-framework500.classpath}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
