add emergency ids list

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -47,8 +47,8 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
-javac.deprecation=false
-javac.external.vm=true
+javac.deprecation=true
+javac.external.vm=false
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
