emergency id prompt created in initiate

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -46,7 +46,7 @@ javac.classpath=\
     ${libs.spring-framework500.classpath}:\
     ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=-Xlint:unchecked
 javac.deprecation=true
 javac.external.vm=false
 javac.modulepath=
