--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -46,9 +46,9 @@ javac.classpath=\
     ${libs.spring-framework500.classpath}:\
     ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=-Xlint:unchecked
+javac.compilerargs=
 javac.deprecation=true
-javac.external.vm=false
+javac.external.vm=true
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
